--- a/SYSCONTRACT/css/style-system.css
+++ b/SYSCONTRACT/css/style-system.css
@@ -86,15 +86,6 @@ ul li.item-menu a .icon > i{
 
 
 /*Formulário de cadastro de clientes*/
-label{
-    font-size: 1.5rem;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
-}
-
-input{
-    font-size: 1rem;
-}
-
 body{
     width: 100%;
     height: 100vh;
@@ -104,8 +95,10 @@ body{
 }
 
 .container{
+    margin-left: 100px;
+    margin-top: 500px;
     width: 80%;
-    height: 80vh;
+    height: 1000px;
     display: flex;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 212);
 }
@@ -126,13 +119,64 @@ body{
 .form{
     width: 50%;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     background-color: #fff;
     padding: 3rem;
 }
 
-.form-header{
-
+.title{
+font-family: fantasy;
+font-size: 18px;
+color: #b41fff;;
+margin-top: 8px;
+margin-left: 20px;
+margin-bottom: 20px;
 }
+
+
+label{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
+}
+
+.reno{
+font-family: 'Times New Roman', Times, serif;
+font-size: 20px;
+color: #b41fff;
+margin-top: 50px;
+margin-left: 50px;
+}
+
+.input-box{
+    margin-left: 100px;
+}
+
+.input-box input{
+    margin: 0.4rem 0;
+    padding: 0.8rem 1.0rem;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 1px 1px 6px #0000001c;
+}
+
+.input-box input:hover{
+    background-color: #eeeeee75;
+}
+
+
+.Renovação{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+.input-box{
+    gap: 40px;
+    line-height: 20px;
+}
+
+
+
+
