--- a/SYSCONTRACT/style-system.css
+++ b/SYSCONTRACT/style-system.css
@@ -7,6 +7,11 @@
     font-family: 'Outfit', sans-serif;
 }
 
+body{
+    height: 900vh;
+    
+}
+
 /*Menu lateral*/
 nav.menu-lateral{
     width: 80px;
@@ -14,6 +19,7 @@ nav.menu-lateral{
     background-color: #b41fff;
     padding: 40px 0 40px 1%;
     box-shadow: 3px 0 0 #390055;
+
     position: fixed;
     top: 0;
     left: 0;
@@ -72,7 +78,7 @@ ul li.item-menu a .icon > i{
 }
 
 .item-exit{
-    margin-top: 100px;
+    margin-top: 50px;
     border-radius: 10px;
 }
 
